@@ -28,7 +28,7 @@ nobase_dist_doc_DATA = AUTHORS BUGS COPYING COPYING.LESSER NEWS TODO \
   examples/rndo-add.c examples/sample.c examples/threads.c \
   examples/version.c
 
-EXTRA_DIST = PATCHES VERSION doc/README.dev doc/check-typography \
+EXTRA_DIST = PATCHES VERSION doc/README.dev doc/check-typography doc/mini-gmp \
   tools/check_mparam.c tools/ck-clz_tab tools/ck-copyright-notice \
   tools/ck-mparam tools/ck-news tools/ck-version-info tools/get_patches.sh \
   $(DATAFILES)
