@@ -20,11 +20,6 @@ along with the GNU MPFR Library; see the file COPYING.LESSER.  If not, see
 http://www.gnu.org/licenses/ or write to the Free Software Foundation, Inc.,
 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA. */
 
-#ifndef GMP_NUMB_BITS
-/* see https://gmplib.org/list-archives/gmp-bugs/2015-October/003755.html */
-#define GMP_NUMB_BITS (CHAR_BIT * sizeof(mp_limb_t))
-#endif
-
 #ifndef mp_limb_signed_t
 typedef long mp_limb_signed_t;
 #endif
