@@ -37,6 +37,8 @@ Changes from versions 4.0.* to version 4.1.0:
 - New: optional "make check-exported-symbols", mainly for the MPFR developers
   and binary distributions, to check that MPFR does not define symbols with a
   GMP reserved prefix (experimental).
+- Mini-gmp support: replaced --enable-mini-gmp configure option by
+  --with-mini-gmp (still experimental, read doc/mini-gmp).
 
 Changes from versions 3.1.* to version 4.0.0:
 - The "dinde aux marrons" release.
